# use-rustacean

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  release-plz.toml
.devcontainer/: devcontainer.json
.github/workflows/: facade-publish-readiness.yml  publish-readiness.yml  release-plz-release.yml  sbom.yml
crates/use-friend/: Cargo.toml  README.md
crates/use-friend-fixture/: Cargo.toml  README.md
crates/use-friend-fixture/src/: lib.rs
crates/use-friend-markdown/: Cargo.toml  README.md
crates/use-friend-markdown/src/: lib.rs
crates/use-friend-registry/: Cargo.toml  README.md
crates/use-friend-registry/src/: lib.rs
crates/use-friend/src/: lib.rs
crates/use-rustacean/: Cargo.toml  README.md
crates/use-rustacean/src/: lib.rs  prelude.rs
docs/: index.md
examples/: basic.rs
