[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
authors = ["RustUse Contributors"]
edition = "2024"
homepage = "https://rustuse.org"
license = "MIT OR Apache-2.0"
publish = false
readme = "README.md"
repository = "https://github.com/RustUse/use-rustacean"
rust-version = "1.95.0"
version = "0.1.1"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
use-friend = { version = "0.1.1", path = "crates/use-friend" }
use-friend-fixture = { version = "0.1.1", path = "crates/use-friend-fixture" }
use-friend-markdown = { version = "0.1.1", path = "crates/use-friend-markdown" }
use-friend-registry = { version = "0.1.1", path = "crates/use-friend-registry" }
use-rustacean = { version = "0.1.1", path = "crates/use-rustacean" }

[workspace.metadata.rustuse.release]
publish = false
versioning = "lockstep-0.x"
first-publish-candidates = [
  "use-friend",
  "use-friend-fixture",
  "use-friend-registry",
  "use-friend-markdown",
  "use-rustacean",
]

[workspace.lints.rust]
unsafe_code = "forbid"
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
expect_used = "warn"
multiple_crate_versions = "allow"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
todo = "deny"
unimplemented = "deny"
unwrap_used = "warn"
