[package]
name = "use-friend-fixture"
description = "Deterministic Fellow Friends fixture records for RustUse"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-friend-fixture"
keywords = ["rustuse", "fixtures", "metadata", "samples", "data"]
categories = ["data-structures", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-friend.workspace = true

[lints]
workspace = true
