[package]
name = "use-friend-registry"
description = "Deterministic query helpers for Fellow Friends fixture records"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-friend-registry"
keywords = ["rustuse", "fixtures", "query", "registry", "metadata"]
categories = ["data-structures", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
use-friend.workspace = true
use-friend-fixture.workspace = true

[lints]
workspace = true
