[package]
name = "use-rustacean"
description = "Facade crate for RustUse Fellow Friends deterministic fixture data"
publish = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
documentation = "https://docs.rs/use-rustacean"
keywords = ["rustuse", "fixtures", "facade", "metadata", "docs"]
categories = ["data-structures", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
serde = ["use-friend/serde"]

[dependencies]
use-friend.workspace = true
use-friend-fixture.workspace = true
use-friend-markdown.workspace = true
use-friend-registry.workspace = true

[[example]]
name = "basic"
path = "../../examples/basic.rs"

[lints]
workspace = true